[gd_scene load_steps=10 format=2]

[ext_resource path="res://title_scene/title_screen.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enviornment/backdrops/firstlandscape.png" type="Texture" id=2]
[ext_resource path="res://title_scene/Buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_scene/Buttons/ContinueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_scene/Buttons/OptionButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_scene/Buttons/ExitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/aesymatt.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 7 )

[node name="title_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 318.652, 198.937 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 139.32
margin_top = 158.789
margin_right = 503.32
margin_bottom = 352.789

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 364.0
stretch_mode = 6

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 4.0
margin_right = 364.0
margin_bottom = 194.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 360.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_bottom = 50.0
rect_min_size = Vector2( 360, 50 )
scene_to_load = "res://levels/l1.tscn"

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 70.0
margin_bottom = 120.0
rect_min_size = Vector2( 360, 50 )
scene_to_load = ""

[node name="OptionButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
visible = false
margin_top = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 360, 50 )

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 140.0
margin_bottom = 190.0
rect_min_size = Vector2( 360, 50 )

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
editor/display_folded = true
margin_left = 364.0
margin_right = 364.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_top = 95.0
margin_bottom = 95.0

[node name="VersionLabel" type="Label" parent="Menu"]
visible = false
margin_top = 198.0
margin_right = 364.0
margin_bottom = 377.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Version 1.2.4
Team 8"

[node name="FadeIn" parent="." instance=ExtResource( 8 )]
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
[connection signal="pressed" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
